Refactor Spark application: Added debug logging for class file management, updated packaging process, and improved error handling in run configuration. Added README for setup instructions and file transfer.